samples/_failures_safe/1761614904_a0e875_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ed37350.c: In function ‘get_user_input’:
./samples/SAFE/__tmp_7ed37350.c:161:48: error: expected ‘)’ at end of input
  161 |     } else if (strncmp(input_buffer, "error", 5
      |                       ~                        ^
      |                                                )
./samples/SAFE/__tmp_7ed37350.c:161:5: error: expected declaration or statement at end of input
  161 |     } else if (strncmp(input_buffer, "error", 5
      |     ^
